@@ -1,3 +1,9 @@
+2009-04-25  Guillaume Smet <guillaume-pg@smet.org>
+
+	* fixed an oversight in stderr parser related to [#1010525] stderr
+	Multiline queries are not parsed
+	* backported fixes from BRANCH_1_0
+
 2009-04-18  Guillaume Smet <guillaume-pg@smet.org>
 
 	* added support for lists and regexps in -user and -database filter options
